@@ -14,6 +14,7 @@ Version 2010
   * Fixed soundness bugs related to "destroy_constrs" optimization and record
     getters
   * Fixed soundness bug related to higher-order constructors
+  * Added cache to speed up repeated Kodkod invocations on the same problems
   * Renamed "MiniSatJNI", "zChaffJNI", "BerkMinAlloy", and "SAT4JLight" to
  	"MiniSat_JNI", "zChaff_JNI", "BerkMin_Alloy", and "SAT4J_Light"
 
